--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -14,6 +14,9 @@ body{
     font-family: OpenSansSemibold,"Helvetica Neue", Helvetica, Arial, sans-serif ;
   }
 }
+p,h1,h2,h3,h4,h5{
+  font-family:"Myriad Pro","Helvetica Neue", Helvetica, Arial, sans-serif ;
+}
 .centered{
   text-align: center;
   opacity: 0.7;
@@ -145,6 +148,7 @@ body{
     font-size: 1.4em;
     color: #747c81;
     line-height: 1.25;
+    font-family:"Helvetica Neue", Helvetica, Arial, sans-serif ;
   }
   h3{
     color: #a4a4a4;
