--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,14 +11,22 @@
             </div>
             <div class="span6">
             <div class="">
-              <h4>Easy, Fast and Convenient</h4>
-              <p class="">Requires no internet connection, no USSD codes to remember, simply touch and let qwiki do it all</p></div>
+              <h4>Quick and Easy</h4>
+              <p class="">No USSD codes to remember or ask friends, simply touch and let <strong>QwiQar</strong> do it all for you</p></div>
+            </div>
+            <div class="centered">
+              <%= image_tag "design.png" %>
+            </div>
+            <div class="span6 offset6">
+              <div class="">
+                <h4>Uniform User Interface</h4>
+                <p class="">Gorgeously designed to have a uniform interface across all network service providers</p></div>
             </div>
           </div>
 
         </div>
         <div class="span6">
-          <%= image_tag "s4w.jpg" %>
+          <%= image_tag "Hardware-White.jpg" %>
           </div>
       </div>
        <div class="divider-horizontal"></div>
