--- a/app/views/layouts/_app_call.html.erb
+++ b/app/views/layouts/_app_call.html.erb
@@ -1,5 +1,5 @@
 <div class="span5">
-  <%= image_tag "s4w.jpg" %>
+  <%= image_tag "Hardware-White.jpg" %>
   <div class="row-fluid app-buttons">
     <a class="span6">
       <%= image_tag "Buttons-05.png" %>
