--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<% content_for :default_sign_login do %>
+ <% content_for :default_sign_login do %>
     <ul class="nav pull-right">
       <li class="divider-vertical"></li>
       <li class="">
@@ -15,7 +15,7 @@
         <span class="icon-bar"></span>
       </a>
       <%= link_to root_url,:class => "brand" do%>
-         <%= image_tag "title.png" %>
+         <%= image_tag "app-title.png" %>
       <% end %>
       </div>
   </div>
