--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title><%= content_for?(:title) ? yield(:title) : "QwiQar" %></title>
+  <%= favicon_link_tag '/assets/favicon.png', rel: 'shortcut icon', type: 'image/png'  %>
   <%= favicon_link_tag '/assets/apple-touch-icon.png', rel: 'apple-touch-icon', type: 'image/png'  %>
   <%= favicon_link_tag '/assets/apple-touch-icon-72x72.png', rel: 'apple-touch-icon',sizes:"72x72", type: 'image/png'  %>
   <%= favicon_link_tag '/assets/apple-touch-icon-114x114.png', rel: 'apple-touch-icon', sizes:"114x114", type: 'image/png'  %>
