--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -31,12 +31,12 @@
       </div>
        <div class="divider-horizontal"></div>
       <div class="row-fluid action app-buttons">
-        <a class="">
-          <%= image_tag "Buttons-05.png" %>
-        </a>
-        <a class="">
-          <%= image_tag "Buttons-09.png" %>
-        </a>
+        <%= link_to "https://play.google.com/store/apps/details?id=com.rzaartz.kwiki" do %>
+            <%= image_tag "Buttons-05.png" %>
+        <% end %>
+        <%= link_to "http://appworld.blackberry.com/webstore/content/36357887" do %>
+            <%= image_tag "Buttons-09.png" %>
+        <% end %>
       </div>
     </section>
 
