--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,5 +2,5 @@
 <div id="footer" class="container">
 
 
-  <div class="copyright letterPressed">Copyright © 2013 Rzaartz ltd. All Rights Reserved</div>
+  <div class="copyright letterPressed">Copyright © 2013 <a href="http://rzaartz.com">Rzaartz</a> ltd. All Rights Reserved</div>
 </div>
