--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,6 +17,19 @@
       <%= link_to root_url,:class => "brand" do%>
          <%= image_tag "app-title.png" %>
       <% end %>
+      <ul class="user_nav nav  pull-right">
+        <li class="">
+          <%= link_to "http://www.facebook.com/qwiqar" do %>
+            <i class="icon-facebook"></i>
+          <% end %>
+        </li>
+        <li class="divider-vertical"></li>
+        <li class="">
+          <%= link_to "http://www.twitter.com/@qwiqar" do %>
+              <i class="icon-twitter"></i>
+          <% end %>
+        </li>
+      </ul>
       </div>
   </div>
 </div>
