--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -4,7 +4,7 @@
     <div class="main span8">
       <div id="profilePhoto" class="box">
       <header class="header-box">
-        <h3 class="heading"><i class="icon-picture"></i> Photo</h3>
+        <h3 class="heading"><i class="fa fa-picture-o"></i> Photo</h3>
         <div class="toolbox">
           <a href="#editPhotoModal" role="button" class="btn" data-toggle="modal" class="btn" ><i class="icon-edit"></i></a>
         </div>
@@ -17,7 +17,7 @@
     </div>
       <div id="profileDetails" class="box">
         <header class="header-box">
-          <h3 class="heading"><i class="icon-information"></i> Basic Info</h3>
+          <h3 class="heading"><i class="fa fa-info-circle"></i> Basic Info</h3>
           <div class="toolbox">
             <a href="#editInfoModal" role="button" class="btn" data-toggle="modal" class="btn" ><i class="icon-edit"></i></a>
           </div>
