--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -2,19 +2,44 @@ body{
   color: #555;
   font-weight: 300;
   overflow-x: hidden;
-  background-color: #fffeee;
+  background-color: #f3fff2;
 }
-.navbar-inner{
-  background-color: #159ceb;
-  background-image: none;
-  box-shadow: none;
-  .brand{
-    color:#fff;
-    text-shadow: none;
-    font-family: OpenSansSemibold,"Helvetica Neue", Helvetica, Arial, sans-serif ;
+.navbar-fixed-top, .navbar-static-top{
+  .navbar-inner{
+    background-color: #529ECA;
+    background-image: none;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+    border:none;
+    .brand{
+      color:#fff;
+      text-shadow: none;
+      font-family: OpenSansSemibold,"Helvetica Neue", Helvetica, Arial, sans-serif ;
+    }
   }
 }
+.box{
+  padding: 20px;
+  border:1px solid #ccc;
+  margin-bottom: 20px;
+}
 
+.box,.tableContent header{
+  background-color:#fff;
+}
+.box-lead{
+  margin-top: 20px;
+}
+.box-header{
+  position: relative;
+  margin-bottom: 20px;
+  border-bottom: 1px dashed #dedede;
+  .light-header{
+    color: #53B1E8;
+    text-shadow: 0 1px 0 rgba(255,255,255,0.6);
+  }
+}
 .centered{
   text-align: center;
   opacity: 0.7;
@@ -71,22 +96,7 @@ body{
   position: relative;
 }
 
-.box{
-  background-color: #F6F5F3;
-  padding: 20px;
-  border:1px solid #ccc;
-  margin-bottom: 20px;
-}
-.box-lead{
-  margin-top: 20px;
-}
-.box-header{
-  position: relative;
-  margin-bottom: 20px;
-  .light-header{
 
-  }
-}
 .sub-heading,.heading{
   h1,h2, h3{
     font-weight: 100;
@@ -316,9 +326,9 @@ form,.form_central{
   .field_with_errors{
     input,select,textarea,.custom-select{
       border-color: #B94A48 ;
-      -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-      -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-      box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+      -webkit-box-shadow:none;
+      -moz-box-shadow:none;
+      box-shadow:none;
     }
     label{
       color: #606060;
@@ -343,12 +353,12 @@ form,.form_central{
 }
 // new added
 .nav-tabs{
-  border-bottom: 1px solid #159ceb;
+  border-bottom: 1px solid #529ECA;
   li{
     a{
       color: #0086bd;
       font-size: 12px;
-      font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+      font-family: OpenSansRegular,"Helvetica Neue", Helvetica, Arial, sans-serif;
       border: none;
       border-bottom: 4px solid transparent;
       border-radius: 0;
@@ -364,18 +374,25 @@ form,.form_central{
   }
   >.active{
     >a,>a:hover,a:focus{
-      background-color: #fffdfd;
+      background: transparent;
       border: none;
       color: #555555;
-      border-bottom: 5px solid #159ceb;
+      border-bottom: 5px solid #529ECA;
     }
   }
 }
-
+.tab-host{
+  .nav {
+    margin: 0;
+    border-bottom: none;
+  }
+  margin:0 5px 20px;
+  border-bottom: 1px solid #529ECA;
+}
 .nav-list,.dropdown-menu,.dropup-menu,.custom-select-menu{
    li{
     a{
-      color: #0086bd;
+      color: #496270;
       border: 1px solid transparent;
       text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
       font-size: 12px;
@@ -384,10 +401,10 @@ form,.form_central{
       background:transparent;
       cursor: pointer;
       &:hover{
-        color: #0086bd;
+        color: #496270;
         text-decoration: none;
         border: 1px solid transparent;
-        background: #ddf4ff;
+        background: #ddf5e7;
         .ui-btn-inner{
           border-color:rgba(255,255,255,0.3);
         }
@@ -410,7 +427,7 @@ form,.form_central{
   > .active,.selected{
     a,a:hover{
       color: #ffffff;
-      background-color: #159ceb;
+      background-color: #529ECA;
       font-weight: bold;
       text-shadow: 0 -1px 0 rgba(0,0,0,0.2);
       font-family:"Helvetica Neue", Helvetica, Arial, sans-serif ;
@@ -452,9 +469,8 @@ form,.form_central{
 }
 header{
   color:#555;
-  border-bottom: 4px solid #159ceb;
   .heading{
-    color: #159ceb;
+    color: #496270;
     text-align: left;
     margin-bottom: 0;
   }
@@ -535,14 +551,7 @@ header{
     position: relative;
   }
 }
-.tab-host{
-  .nav {
-    margin: 0;
-    border-bottom: none;
-  }
-  margin:0 5px 20px;
-  border-bottom: 1px solid #159ceb;
-}
+
 .search-form{
   margin: 0;
   .control-group{
@@ -653,6 +662,56 @@ header{
 .icon-phone{
   color: #00c900;
 }
+.table-st{
+  margin-bottom: 0;
+  tr{
+
+  td{
+    padding: 0;
+    .inner{
+      overflow: hidden;
+      padding: 8px;
+      font-size: 12px;
+      .user{
+       max-width: 150px;
+      .avatar{
+        width:40px;
+      }
+      .user-info {
+        margin-left: 50px;
+      }
+      }
+      .label{
+        min-width:80px;
+        text-align: center;
+      }
+    }
+  }
+    border-top:1px solid #fff;
+    &:nth-child(odd),&:nth-child(even){
+        &:hover{
+          td{
+            background: #e5f3ff;
+          }
+        }
+    }
+    &:nth-child(odd){
+      td{
+        background: #f4fff3;
+      }
+    }
+    &:nth-child(even)
+      td{
+    }
+    &:last-child{
+      td{
+        border-bottom: none;
+      }
+    }
+  }
+}
+
+
 .contactItems{
   li{
      a{
@@ -725,9 +784,9 @@ header{
   }
   header{
     padding: 10px;
-    background-color:#F3F4F5;
     position:relative;
     border:1px solid #D1D2D3;
+    border-bottom-color: #dedede;
 
   }
   .tableContainer{
@@ -778,6 +837,7 @@ header{
   }
   .user-info{
     margin-left:70px;
+    padding:3px 0;
     .name{
       .light-header{
         margin-bottom: 0;
@@ -800,6 +860,9 @@ header{
       width:50%;
       margin:0;
       .thumbnail{
+        -webkit-box-shadow: none;
+        -moz-box-shadow: none;
+        box-shadow: none;
         margin: 5px;
       }
     }
@@ -845,12 +908,12 @@ header{
 
   }
 }
-.zero-radius{
+.zero-radius,.alert,.btn-group > .btn:first-child,.btn-group > .btn:last-child{
   -moz-border-radius: 0;
   -webkit-border-radius: 0;
   border-radius: 0;
 }
-.profile-details-wrap{
+.profile-details-wrap,.pay-slip{
   padding: 10px 0;
   ul{
     list-style: none;
@@ -869,6 +932,16 @@ header{
         color:#555;
       }
     }
+  }
+}
+.pay-slip{
+  .total{
+    padding: 8px;
+  }
+  .notice-info{
+   .alert{
+     text-align: center;
+   }
   }
 }
 
@@ -1000,8 +1073,8 @@ header{
     -moz-border-radius:0 0 0 0;
     border-radius: 0 0 0 0;
     margin: 5px 5px 0;
-    border: 1px solid #1f7aeb;
-    background-color: #159ceb;
+    border: 1px solid #3c7494;
+    background-color: #529ECA;
     color: #fff;
     text-shadow:0 -1px 0 rgba(0,0,0,0.3);
     font-family:"Helvetica Neue", Helvetica, Arial, sans-serif ;
@@ -1034,7 +1107,7 @@ header{
   }
   .modal-body{
     margin: 0 5px;
-    background-color: #fffeee;
+    background-color: #f3fff2;
     .search-form{
       margin: 0;
     }
@@ -1229,10 +1302,6 @@ header{
 
 .alert{
   font-size: 12px;
-  -webkit-border-radius: 3px;
-  -moz-border-radius:3px;
-  border-radius: 3px;
-  margin: 20px 0 0;
 }
 .progress{
   height: 10px;
@@ -1285,7 +1354,7 @@ header{
 
 
 .label-success, .badge-success {
-  background-color: #29B129;
+  background-color: #4BB495;
 }
 textarea,input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"], .uneditable-input {
 
@@ -1344,9 +1413,6 @@ input:-moz-placeholder, textarea:-moz-placeholder ,.navbar-inverse .navbar-searc
   background-color:#fff;
   padding: 4px 6px;
   border: 1px solid #ccc;
-  -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 1px 0 rgba(255, 255, 255, 1);
-  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 1px 0 rgba(255, 255, 255, 1);
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 1px 0 rgba(255, 255, 255, 1);
   -webkit-transition: border linear .2s, box-shadow linear .2s;
   -moz-transition: border linear .2s, box-shadow linear .2s;
   -o-transition: border linear .2s, box-shadow linear .2s;
@@ -1550,9 +1616,6 @@ input:-moz-placeholder, textarea:-moz-placeholder ,.navbar-inverse .navbar-searc
   position:relative;
   background-color:#fff;
   border: 1px solid #ccc;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   -webkit-transition: border linear 0.2s, box-shadow linear 0.2s;
   -moz-transition: border linear 0.2s, box-shadow linear 0.2s;
   -ms-transition: border linear 0.2s, box-shadow linear 0.2s;
@@ -1871,6 +1934,19 @@ input:-moz-placeholder, textarea:-moz-placeholder ,.navbar-inverse .navbar-searc
     text-align: left;
     padding: 8px;
   }
+  .dropdown-menu{
+    text-align: left;
+  }
+}
+
+.tab-form-container{
+  text-align: center;
+  .light-header{
+    margin: 5px 0 0;
+  }
+  .option-form{
+    margin: 0;
+  }
 }
 .chzn-container-multi,.chzn-container-single.chzn-container{
   font-size: 12px;
@@ -2183,12 +2259,18 @@ a.btn_x{
   margin-bottom: 40px;
 }
 
-.divider-horizontal{
+.divider-horizontal,divider-horizontal-b{
   width:100%;
   max-width: 960px;
   margin: 10px auto;
   height: 12px;
   background: url('diagonal-pattern.png') repeat-x;
+}
+.divider-horizontal-b{
+  background-color: #fff;
+  border-bottom: 1px solid #dedede;
+  height: 1px;
+  margin: 10px -10px 5px;
 }
 
 
@@ -2352,6 +2434,7 @@ a.btn_x{
   line-height: 20px;
   color: #555555;
 }
+
 .user-show{
   padding: 20px;
   .user{
@@ -2578,4 +2661,131 @@ ul.listbuilder-focus {
   input {
     color:#333;
   }
+}
+.shadow-none{
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+}
+.slider-input{
+  input,input:focus,.amount-status{
+    color: #f6931f;
+    font-weight: bold;
+  }
+  .ui-slider {
+    background:#fff;
+    padding:0;
+    border-radius: 0;
+    border-color:#ccc;
+    .ui-slider-handle {
+      top: -5px;
+      margin-left: -13px;
+      width: 26px;
+      height: 36px;
+      -webkit-border-radius: 0;
+      -moz-border-radius: 0;
+      border-radius: 0;
+      background-color: #eee;
+    }
+  }
+}
+.orange{
+  color: #f6931f;
+}
+.badgex{
+  position: absolute;
+  width:80px;
+  height:140px;
+  right: 0;
+  display:none;
+  top:100%;
+  z-index: 99;
+  background-color: #8b0000;
+  margin-top: 4px;
+  &:before {
+    content: '';
+    display: inline-block;
+    border-left: 40px solid transparent;
+    border-right: 40px solid transparent;
+    border-bottom: 40px solid #F6F5F3;
+    position: absolute;
+    bottom:0;
+    right: 0;
+  }
+  text-align:center;
+  .offer{
+    font-weight: bold;
+    font-size: 30px;
+  }
+  .offer-class{
+    display: block;
+    padding: 7px;
+  }
+  .offer-label{
+    font-size: 14px;
+    font-family: OpenSansItalic,"Lucida Grande","Lucida Sans Unicode",Arial,sans-serif;
+    margin-top: -20px;
+  }
+  .offer-label,.offer{
+    color:#fff;
+    text-shadow: 0 -1px 0 #000;
+  }
+}
+
+.after{
+  content: '';
+  display: inline-block;
+  border-left: 6px solid transparent;
+  border-right: 6px solid transparent;
+  border-bottom: 6px solid #ffffff;
+  position: absolute;
+  top: -6px;
+  left: 7px;
+}
+
+textarea, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"], .uneditable-input {
+  border: 1px solid #ccc;
+  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.6);
+  -moz-box-shadow:none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+}
+.modal-content-body{
+  padding: 20px;
+  .dl-horizontal{
+    width: 300px;
+    margin: 0 auto;
+    font-size: 12px;
+    text-shadow: 0 1px 0 rgba(255,255,255,0.6);
+    dd{
+      font-family: OpenSansRegular,"Helvetica Neue", Helvetica, Arial, sans-serif;
+    }
+  }
+}
+/**
+.custom-select,.customfile,textarea, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"], .uneditable-input {
+  -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 1px 0 rgba(255, 255, 255, 1);
+  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 1px 0 rgba(255, 255, 255, 1);
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 1px 0 rgba(255, 255, 255, 1);
+}
+**/
+.btn-primary {
+  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+  background-color: #5283cc;
+}
+.btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .btn-primary.disabled, .btn-primary[disabled] {
+  color: #ffffff;
+  background-color: #446ca8;
+}
+.btn-warning {
+  background-color: #f1b533;
+}
+.btn-warning:hover, .btn-warning:focus, .btn-warning:active, .btn-warning.active, .btn-warning.disabled, .btn-warning[disabled] {
+  background-color: #f89406;
+}
+.input-prepend.input-append input, .input-prepend.input-append select, .input-prepend.input-append .uneditable-input {
+  border-right: none;
+}
+.table th {
+  font-size: 12px;
 }
