--- a/app/views/top_ups/index.html.erb
+++ b/app/views/top_ups/index.html.erb
@@ -8,10 +8,6 @@
             <form class="form-horizontal letterPressed">
               <header class="box-header">
                 <h3 class="light-header">Quick Top Up</h3>
-
-                <div class="shadow-bottom-wrap">
-                  <div class="shadow-top"></div>
-                </div>
               </header>
               <div class="control-group">
                 <label class="control-label" for="inputPassword"><i class="icon-mobile"></i> Phone Number</label>
@@ -47,92 +43,218 @@
               </div>
               <div class="control-group">
                 <div class="controls controls-row input_padding_extra ">
-                  <button class="btn btn-warning btn-large" type="button" ><i class="icon-send"></i> Top Up : ₦60,000</button>
+                  <button class="btn btn-warning btn-large" type="button" ><i class="icon-send"></i> Top Up </button>
                 </div>
               </div>
             </form>
           </div>
-          <div class="">
-            <div class="tableContent">
-              <header class="letterPressed clearfix">
-                <div class="top-btn-container">
-                  <h5 class="light-header pull-left">
-                    <i class="icon-time"></i> History
-                  </h5>
+        </div>
+      </div>
+      <div id="history">
+      <div class="tableContent">
+      <header class="letterPressed clearfix">
+        <div class="top-btn-container">
+          <h5 class="light-header pull-left">
+            <i class="icon-time"></i> History
+          </h5>
                   <span class="tool-bar">
                     <button class="btn" type="button"><i class="icon-double-angle-left"></i></button>
                     &nbsp;  2/6   &nbsp;
                     <button class="btn" type="button"><i class="icon-double-angle-right"></i></button>
-                    <div class="btn-group">
-                      <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
-                        Action
+                    <div class="btn-group ">
+                      <a class="btn  dropdown-toggle" data-toggle="dropdown" href="#">
+                        Filter
                         <span class="caret"></span>
                       </a>
                       <div class="dropdown-menu">
-                        <form class="drop-form">
-                          <div class="control-group">
-                            <label class="control-label" for="inputPassword"><i class="icon-calendar"></i> Start Date</label>
-                            <div class="controls input_padding_extra ">
-                              <input type="date" placeholder="password" class="span12"/>
-                            </div>
-                          </div>
-                          <div class="control-group">
-                            <label class="control-label" for="inputPassword"><i class="icon-calendar"></i> End Date</label>
-                            <div class="controls input_padding_extra ">
-                              <input type="date" placeholder="2/12/2013" class="span12"/>
-                            </div>
-                          </div>
-                        </form>
+                        <li class="">
+                          <a tabindex="-1" href="#">Date</a>
+                        </li>
+                        <li class="">
+                          <a tabindex="-1" href="#">Status</a>
+                        </li>
                       </div>
                     </div>
                   </span>
 
 
-                  <div class="input-append input-prepend">
-                    <span class="add-on"><i class="icon-search"></i></span>
-                    <input class="span8" id="appendedInputButtons" size="16" type="text"><button class="btn" type="button">Search</button>
+          <div class="input-append input-prepend">
+            <span class="add-on"><i class="icon-search"></i></span>
+            <input class="span8" id="appendedInputButtons" size="16" type="text"><button class="btn btn-primary" type="button">Search</button>
 
-                  </div>
-                </div>
-
-                <div class="shadow-bottom-wrap">
-                  <div class="shadow-top"></div>
-                </div>
-              </header>
-              <div class="tableContainer">
-                <table class="table letterPressed table-hover">
-                  <thead>
-                  <tr>
-                    <th>#</th>
-                    <th>First Name</th>
-                    <th>Last Name</th>
-                    <th>Username</th>
-                  </tr>
-                  </thead>
-                  <tbody>
-                  <tr>
-                    <td>1</td>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                  </tr>
-                  <tr>
-                    <td>2</td>
-                    <td>Jacob</td>
-                    <td>Thornton</td>
-                    <td>@fat</td>
-                  </tr>
-                  <tr>
-                    <td>3</td>
-                    <td colspan="2">Larry the Bird</td>
-                    <td>@twitter</td>
-                  </tr>
-                  </tbody>
-                </table>
-              </div>
-            </div>
           </div>
         </div>
+        <div class="tab-form-container">
+          <div class="divider-horizontal-b"></div>
+          <h6 class="light-header pull-left status-el">
+            Status &nbsp; <i class="fa fa-toggle-right"></i>
+          </h6>
+          <form class="option-form form-inline">
+                    <span class="date-el" style="display: none;">
+                    <label>Start Date</label>
+                    <input type="text" class="input-medium" placeholder="">
+                    <button class="btn" type="button"><i class="icon-calendar"></i></button>
+                    <span>&nbsp;  &nbsp;</span>
+
+                    <label>End Date</label>
+
+                    <input type="text" class="input-medium" placeholder="">
+                    <button class="btn" type="button"><i class="icon-calendar"></i></button>
+                     </span>
+                    <span class="filter-el">
+                      <label class="checkbox inline">
+                        <input type="checkbox" id="inlineCheckbox1" value="option1"> success
+                      </label>
+                      <label class="checkbox inline">
+                        <input type="checkbox" id="inlineCheckbox2" value="option2"> Failed
+                      </label>
+                      <label class="checkbox inline">
+                        <input type="checkbox" id="inlineCheckbox3" value="option3"> Pending
+                      </label>
+                    </span>
+          </form>
+        </div>
+      </header>
+      <div class="tableContainer">
+        <table class="table table-st letterPressed table-hover">
+          <thead>
+          <tr>
+            <th>Recipient</th>
+            <th>Order No</th>
+            <th>Amount</th>
+            <th>Date</th>
+            <th>Status</th>
+            <th>Details</th>
+          </tr>
+          </thead>
+          <tbody>
+          <tr>
+            <td>
+              <div class="inner">
+                <div class="user">
+                  <div class="avatar">
+                    <%= image_tag "avatar.png" %>
+                  </div>
+                  <div class="user-info">
+                    <h6 class="light-header ui-inline-text">Onyemaechi Okafor</h6>
+                    <p><i class="icon-phone"></i> 080994459595</p>
+                  </div>
+                  <div class="clearfix"></div>
+                </div>
+              </div>
+            </td>
+            <td>
+              <div class="inner">
+                1234567
+              </div>
+            </td>
+            <td>
+              <div class="inner">
+                ₦50.00
+              </div>
+            </td>
+            <td>
+              <div class="inner">
+                12/2/1989
+              </div>
+            </td>
+            <td>
+              <div class="inner">
+                <span class="label label-success"><i class="fa fa-flag"></i> success </span>
+              </div>
+            </td>
+            <td>
+              <div class="inner">
+                <a class="btn" role="button"> details</a>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <div class="inner">
+                <div class="user">
+                  <div class="avatar">
+                    <%= image_tag "avatar.png" %>
+                  </div>
+                  <div class="user-info">
+                    <h6 class="light-header ui-inline-text">Onyemaechi Okafor</h6>
+                    <p><i class="icon-phone"></i> 080994459595</p>
+                  </div>
+                  <div class="clearfix"></div>
+                </div>
+              </div>
+            </td>
+            <td>
+              <div class="inner">
+                1234567
+              </div>
+            </td>
+            <td>
+              <div class="inner">
+                ₦50.00
+              </div>
+            </td>
+            <td>
+              <div class="inner">
+                12/2/1989
+              </div>
+            </td>
+            <td>
+              <div class="inner">
+                <span class="label label-success"><i class="fa fa-flag"></i> success </span>
+              </div>
+            </td>
+            <td>
+              <div class="inner">
+                <a class="btn" role="button"> details</a>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <div class="inner">
+                <div class="user">
+                  <div class="avatar">
+                    <%= image_tag "avatar.png" %>
+                  </div>
+                  <div class="user-info">
+                    <h6 class="light-header ui-inline-text">Onyemaechi Okafor</h6>
+                    <p><i class="icon-phone"></i> 080994459595</p>
+                  </div>
+                  <div class="clearfix"></div>
+                </div>
+              </div>
+            </td>
+            <td>
+              <div class="inner">
+                1234567
+              </div>
+            </td>
+            <td>
+              <div class="inner">
+                ₦50.00
+              </div>
+            </td>
+            <td>
+              <div class="inner">
+                12/2/1989
+              </div>
+            </td>
+            <td>
+              <div class="inner">
+                <span class="label label-success"><i class="fa fa-flag"></i> success </span>
+              </div>
+            </td>
+            <td>
+              <div class="inner">
+                <a class="btn" role="button"> details</a>
+              </div>
+            </td>
+          </tr>
+          </tbody>
+        </table>
+      </div>
+      </div>
       </div>
     </div>
   </div>
