--- a/app/views/layouts/_side_nav.html.erb
+++ b/app/views/layouts/_side_nav.html.erb
@@ -10,7 +10,7 @@
             <h4 class="light-header ui-inline-text">Paul Aden Smith alonso</h4>
           </div>
 
-           <span class="account-label label label-success"><i class="icon-money"></i>  ₦60,000</span>
+           <span class="account-label label label-success"><i class="icon-money"></i> 60,000</span>
         </div>
       </div>
       <div class="clearfix"></div>
@@ -19,12 +19,11 @@
 
   <div class="box box-lead">
     <ul class="nav nav-list ">
-      <%= nav_tab("Transfer",user_top_ups_url(current_user), current:current_tab,icon:{:class=>"icon-publish"}) %>
+      <%= nav_tab("Top Up",user_top_ups_url(current_user), current:current_tab,icon:{:class=>"icon-publish"}) %>
       <%= nav_tab("Profile",profile_user_url(current_user), current:current_tab,icon:{:class=>"icon-vcard"}) %>
       <%= nav_tab("Wallet",user_wallet_url(current_user,current_user.wallet), current:current_tab,icon:{:class=>"icon-diary"}) %>
       <%= nav_tab("People",people_user_url(current_user), current:current_tab,icon:{:class=>"icon-group"}) %>
-      <%= nav_tab("Order History",orders_url, current:current_tab,icon:{:class=>"icon-history"}) %>
-      <%= nav_tab("Analytics",orders_url, current:current_tab,icon:{:class=>"icon-bar-chart"}) %>
+      <%= nav_tab("History",orders_url, current:current_tab,icon:{:class=>"icon-history"}) %>
       <%= nav_tab("Users",users_url, current:current_tab,icon:{:class=>"icon-users"}) %>
     </ul>
   </div>
