--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,140 +2,111 @@
   <div class="row-fluid">
     <%= currently_at_side_nav 'Users' %>
     <div class="main span8">
-      <div id="people" class="box">
-        <%= currently_at_people_nav 'Contacts' %>
+      <div id="users" class="box">
+        <header class="">
+          <h3 class="light-header"><i class="icon-users"></i> Users
+          </h3>
+          </header>
         <div class="tab-content">
-          <div id="allContacts" class="tab-pane">
-            <div class="search-container">
-              <form class="search-form row-fluid">
-                <div class="control-group">
-                  <div class="controls input_padding_extra ">
-                    <a  role="button" data-toggle="modal" class="tool-button"><i class="icon-search"></i></a>
-                    <input type="text" class="span12"  placeholder="Type a contact name">
-                    <div class="tool-buttons">
-                      <a href="#newContactModal" role="button" data-toggle="modal" class="btn btn-right zero-radius"><i class="icon-plus"></i></a>
+
+        <div id="history">
+        <div class="tableContent">
+        <header class="letterPressed clearfix">
+          <div class="top-btn-container">
+                  <span class="tool-bar">
+                    <button class="btn" type="button"><i class="icon-double-angle-left"></i></button>
+                    &nbsp;  2/6   &nbsp;
+                    <button class="btn" type="button"><i class="icon-double-angle-right"></i></button>
+                    <div class="btn-group ">
+                      <a class="btn  dropdown-toggle" data-toggle="dropdown" href="#">
+                        Filter
+                        <span class="caret"></span>
+                      </a>
+                      <div class="dropdown-menu">
+                        <li class="">
+                          <a tabindex="-1" href="#">Date</a>
+                        </li>
+                        <li class="">
+                          <a tabindex="-1" href="#">Status</a>
+                        </li>
+                      </div>
                     </div>
+                  </span>
+
+
+            <div class="input-append input-prepend">
+              <span class="add-on"><i class="icon-search"></i></span>
+              <input class="span8" id="appendedInputButtons" size="16" type="text"><button class="btn btn-primary" type="button">Search</button>
+
+            </div>
+          </div>
+        </header>
+        <div class="tableContainer">
+          <table class="table table-st letterPressed table-hover">
+            <thead>
+            <tr>
+              <th>User</th>
+              <th>ID</th>
+              <th>Created</th>
+              <th>Credit</th>
+              <th>Status</th>
+              <th>Details</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+              <td>
+                <div class="inner">
+                  <div class="user">
+                    <div class="avatar">
+                      <%= image_tag "avatar.png" %>
+                    </div>
+                    <div class="user-info">
+                      <h6 class="light-header ui-inline-text">Onyemaechi Okafor</h6>
+                      <p><i class="icon-phone"></i> 080994459595</p>
+                    </div>
+                    <div class="clearfix"></div>
                   </div>
                 </div>
-              </form>
-            </div>
-            <ul class="thumbnails items">
-              <li class="item">
-                <a href="#contactModal" data-toggle="modal" class="thumbnail zero-radius">
-                  <div class="avatar">
-                    <%= image_tag "avatar.png" %>
-                  </div>
-                  <div class="user-info">
-                    <h6 class="light-header ui-inline-text">User Name Onyemaechi Okafor Peter Sised fjfjf</h6>
-                    <p><i class="icon-phone"></i>080994459595</p>
-                  </div>
-                </a>
-              </li>
-              <li class="item">
-                <a href="#" class="thumbnail zero-radius">
-                  <div class="avatar">
-                    <%= image_tag "avatar.png" %>
-                  </div>
-                  <div class="user-info">
-                    <h6 class="light-header ui-inline-text">Onyemaechi Okafor</h6>
-                    <p><i class="icon-phone"></i>080994459595</p>
-                  </div>
-                </a>
-              </li>
-              <li class="item">
-                <a href="#" class="thumbnail zero-radius">
-                  <div class="avatar">
-                    <%= image_tag "avatar.png" %>
-                  </div>
-                  <div class="user-info">
-                    <h6 class="light-header ui-inline-text">Peter Sise</h6>
-                    <p><i class="icon-phone"></i>080994459595</p>
-                  </div>
-                </a>
-              </li>
-              <li class="item">
-                <a href="#" class="thumbnail zero-radius">
-                  <div class="avatar">
-                    <%= image_tag "avatar.png" %>
-                  </div>
-                  <div class="user-info">
-                    <h6 class="light-header ui-inline-text">Paul Smith</h6>
-                    <p><i class="icon-phone"></i>080994459595</p>
-                  </div>
-                </a>
-              </li>
-            </ul>
-          </div>
-          <div id="groupContacts" class="tab-pane">
-            <div class="search-container">
-              <form class="search-form row-fluid">
-                <div class="control-group">
-                  <div class="controls input_padding_extra ">
-                    <a  role="button" data-toggle="modal" class="tool-button"><i class="icon-search"></i></a>
-                    <input type="text" class="span12"  placeholder="Type a contact name">
-                    <div class="tool-buttons">
-                      <a href="#groupModal" role="button" data-toggle="modal" class="btn btn-right zero-radius"><i class="icon-plus"></i> new group</a>
-                    </div>
-                  </div>
+              </td>
+              <td>
+                <div class="inner">
+                  7996
                 </div>
-              </form>
-            </div>
-            <ul class="thumbnails items">
-              <li class="item">
-                <a href="#contactModal" data-toggle="modal" class="thumbnail zero-radius">
-                  <div class="avatar">
-                    <%= image_tag "avatar.png" %>
-                  </div>
-                  <div class="user-info">
-                    <h6 class="light-header ui-inline-text">Onyemaechi Okafor </h6>
-                    <p><i class="icon-users"></i><span class="label label-success">20</span> members</p>
-                  </div>
-                </a>
-              </li>
-              <li class="item">
-                <a href="#" class="thumbnail zero-radius">
-                  <div class="avatar">
-                    <%= image_tag "avatar.png" %>
-                  </div>
-                  <div class="user-info">
-                    <h6 class="light-header ui-inline-text">Onyemaechi Okafor</h6>
-                    <p><i class="icon-users"></i><span class="label label-success">20</span> members</p>
-                  </div>
-                </a>
-              </li>
-              <li class="item">
-                <a href="#" class="thumbnail zero-radius">
-                  <div class="avatar">
-                    <%= image_tag "avatar.png" %>
-                  </div>
-                  <div class="user-info">
-                    <h6 class="light-header ui-inline-text">Peter Sise</h6>
-                    <p><i class="icon-users"></i><span class="label label-success">20</span> members</p>
-                  </div>
-                </a>
-              </li>
-              <li class="item">
-                <a href="#" class="thumbnail zero-radius">
-                  <div class="avatar">
-                    <%= image_tag "avatar.png" %>
-                  </div>
-                  <div class="user-info">
-                    <h6 class="light-header ui-inline-text">Paul Smith</h6>
-                    <p><i class="icon-users"></i><span class="label label-success">20</span> members</p>
-                  </div>
-                </a>
-              </li>
-            </ul>
-          </div>
+              </td>
+              <td>
+                <div class="inner">
+                             12/2/1989
+                </div>
+              </td>
+              <td>
+                <div class="inner">
+                  ₦5000.00
+                </div>
+              </td>
+              <td>
+                <div class="inner">
+                  <span class="label label-success"> active </span>
+                </div>
+              </td>
+              <td>
+                <div class="inner">
+                  <a class="btn" role="button"> details</a>
+                </div>
+              </td>
+            </tr>
+            </tbody>
+          </table>
+        </div>
+        </div>
+        </div>
         </div>
       </div>
     </div>
   </div>
 </div>
 
-<% content_for :javascript_contents do %>
-    <%= javascript_include_tag "people" %>
-<% end %>
+
 
 <div class="modal hide" id="groupModal" role="dialog" aria-labelledby="contactPicker" aria-hidden="true">
   <div class="modal-header">
