--- a/app/views/wallets/show.html.erb
+++ b/app/views/wallets/show.html.erb
@@ -2,159 +2,20 @@
 <div class="row-fluid">
   <%= currently_at_side_nav 'Wallet' %>
   <div class="main span8">
-    <div id="wallet" class="">
-      <div class="box">
-          <form id="wallet-form" style="display: none;" class="form-horizontal letterPressed">
-            <header class="box-header">
-              <h3 class="light-header"><i class="icon-diary"></i> Wallet
-                <span class="label account-label label-success pull-right"> <i class="icon-money"></i> 50000 credits</span>
-              </h3>
-              <div class="badgex">
-                    <span class="offer-class label label-success">Starter</span>
-                    <p class="offer">3%</p>
-                    <p class="offer-label">discount</p>
-              </div>
-            </header>
-            <div class="control-group">
-              <label class="control-label" for="inputPassword"><i class="icon-money"></i> Credit Units (₦)</label>
-              <div class="controls controls-row slider-input">
-                  <input type="number" name="price" id="slider-range-min" class="span3" klass="span8" value="10000" min="5000" max="100000" step="5000" data-units="naira" />
-              </div>
-            </div>
-              <div class="control-group">
-                <label class="control-label" for="inputPassword"><i class="icon-credit-card"></i> Payment Method</label>
-                <div class="controls controls-row input_padding_extra">
-                <select class="selectMenu" data-class="span8" placeholder="carrier">
-                  <option value="1">Master Card</option>
-                  <option value="3">Visa Card</option>
-                  <option value="2">Verve</option>
-                </select>
-                </div>
-              </div>
-            <div class="control-group">
-              <div class="controls controls-row input_padding_extra ">
-                <button class="btn btn-warning btn-large pay" type="button" data-toggle="modal" data-target="#editModal"  >You Pay:0</button>
-              </div>
-            </div>
-          </form>
-        </div>
-
-      <div id="history">
-        <div class="tableContent">
-          <header class="letterPressed clearfix">
-            <div class="top-btn-container">
-              <h5 class="light-header pull-left">
-                <i class="icon-time"></i> History
-              </h5>
-                  <span class="tool-bar">
-                    <button class="btn" type="button"><i class="icon-double-angle-left"></i></button>
-                    &nbsp;  2/6   &nbsp;
-                    <button class="btn" type="button"><i class="icon-double-angle-right"></i></button>
-                    <div class="btn-group ">
-                      <a class="btn  dropdown-toggle" data-toggle="dropdown" href="#">
-                        Filter
-                        <span class="caret"></span>
-                      </a>
-                      <div class="dropdown-menu">
-                        <li class="">
-                          <a tabindex="-1" href="#">Date</a>
-                        </li>
-                        <li class="">
-                          <a tabindex="-1" href="#">Status</a>
-                        </li>
-                      </div>
-                    </div>
-                  </span>
-
-
-              <div class="input-append input-prepend">
-                <span class="add-on"><i class="icon-search"></i></span>
-                <input class="span8" id="appendedInputButtons" size="16" type="text"><button class="btn btn-primary" type="button">Search</button>
-
-              </div>
-            </div>
-            <div style="display: none;" class="tab-form-container">
-              <div class="divider-horizontal-b"></div>
-              <h6 class="light-header pull-left status-el">
-                Status &nbsp; <i class="fa fa-toggle-right"></i>
-              </h6>
-              <form class="option-form form-inline">
-                    <span class="date-el" style="display: none;">
-                    <label>Start Date</label>
-                    <input type="text" class="input-medium" placeholder="">
-                    <button class="btn" type="button"><i class="icon-calendar"></i></button>
-                    <span>&nbsp;  &nbsp;</span>
-
-                    <label>End Date</label>
-
-                    <input type="text" class="input-medium" placeholder="">
-                    <button class="btn" type="button"><i class="icon-calendar"></i></button>
-                     </span>
-                    <span class="filter-el">
-                      <label class="checkbox inline">
-                        <input type="checkbox" id="inlineCheckbox1" value="option1"> success
-                      </label>
-                      <label class="checkbox inline">
-                        <input type="checkbox" id="inlineCheckbox2" value="option2"> Failed
-                      </label>
-                      <label class="checkbox inline">
-                        <input type="checkbox" id="inlineCheckbox3" value="option3"> Pending
-                      </label>
-                    </span>
-              </form>
-            </div>
-          </header>
-          <div class="tableContainer">
-            <table class="table table-st letterPressed table-hover">
-              <thead>
-              <tr>
-                <th>Order No</th>
-                <th>Credit</th>
-                <th>Amount Billed</th>
-                <th>Date</th>
-                <th>Status</th>
-                <th>Details</th>
-              </tr>
-              </thead>
-              <tbody>
-              <tr>
-                <td>
-                  <div class="inner">
-                    1234567
-                  </div>
-                </td>
-                <td>
-                  <div class="inner">
-                    ₦10000
-                  </div>
-                </td>
-                <td>
-                  <div class="inner">
-                    ₦9700.00
-                  </div>
-                </td>
-                <td>
-                  <div class="inner">
-                    12/2/1989
-                  </div>
-                </td>
-                <td>
-                  <div class="inner">
-                    <span class="label label-success"><i class="fa fa-flag"></i> success </span>
-                  </div>
-                </td>
-                <td>
-                  <div class="inner">
-                    <a class="btn" role="button"> details</a>
-                  </div>
-                </td>
-              </tr>
-              </tbody>
-            </table>
-          </div>
-        </div>
+    <div id="wallet" class="box">
+      <header class="box-header">
+        <h3 class="light-header"><i class="title-icon icon-diary"></i> <span class="text"> Wallet</span>
+          <span class="label account-label label-success pull-right"> <i class="icon-money"></i> <%= current_user.wallet.balance %></span>
+        </h3>
+        </header>
+      <div class="badgex">
+        <span class="offer-class label label-success">Starter</span>
+        <p class="offer">3%</p>
+        <p class="offer-label">discount</p>
       </div>
-      </div>
+        <%= render partial:"wallets/form",locals: {deposit:@deposit} %>
+    </div>
+    <div class="modal hide" id="depositOrderModal" role="dialog" ></div>
   </div>
 </div>
 
@@ -162,71 +23,6 @@
     <%= javascript_include_tag "wallets" %>
 <% end %>
 
-<div class="modal hide" id="editModal" role="dialog" aria-labelledby="contactPicker" aria-hidden="true">
-  <div class="modal-header">
-    <div class="inner">
-      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-      <div class="contactHeader">
-        <div class="icon">
-          <i class="fa fa-shopping-cart"></i>
-        </div>
-        <div class="info indent">
-          <h3>Checkout</h3>
-        </div>
-      </div>
-    </div>
 
-  </div>
-  <div class="content modal-body override">
-    <div class="modal-content-body">
-
-      <div class="pay-slip row-fluid letterPressed">
-        <ul class="span6">
-          <li class="row-fluid info-block ">
-            <div class="span6 title">Order No</div>
-            <div class="span6 value">989889</div>
-          </li>
-          <li class="row-fluid info-block ">
-            <div class="span6 title">Credit</div>
-            <div class="span6 value">₦10,000</div>
-          </li>
-          <li class="row-fluid info-block ">
-            <div class="span6 title">Amount</div>
-            <div class="span6 value">₦ 9700</div>
-          </li>
-          <li class="row-fluid info-block">
-            <div class="span6 title">Convenience Fee</div>
-            <div class="span6 value">₦ 150</div>
-          </li>
-          <li class="row-fluid info-block">
-            <div class="span6 title">Payment Method</div>
-            <div class="span6 value">Bank Deposit</div>
-          </li>
-          <li class="row-fluid info-block">
-            <div class="span6 title">Total Due</div>
-            <div class="span6 value"><span class="label total label-important"> ₦ 9850 </span></div>
-          </li>
-        </ul>
-        <div class="notice-info span6">
-          <div class="alert alert-info">
-            Vestibulum id ligula porta felis euismod semper eget lacinia odio sem nec elit.
-            Donec id elit non mi porta gravida at eget metus. <i class="fa fa-lock"></i>
-          </div>
-
-          <div class="alert alert-warning">
-            <i class="fa fa-warning"></i> Your Order is pending
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="modal-footer">
-    <button class="btn btn-danger" ><i class="fa fa-times"></i> Cancel</button>
-    <button class="btn btn-primary"><i class="fa fa-check"></i> Pay Now &raquo;</button>
-    <div class="shadow-top-wrap">
-      <div class="shadow-bottom"></div>
-    </div>
-  </div>
-</div>
 
 </div>
