--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,6 +11,7 @@
  *= require jquery.ui.slider
  *= require bootstrap_and_overrides
  *= require fonts
+  *= require datepicker
  *= require chosen
  *= require icon
  *= require app
