--- a/app/views/top_ups/_phone_number_form.html.erb
+++ b/app/views/top_ups/_phone_number_form.html.erb
@@ -20,6 +20,6 @@
             </div>
           </div>
       <% end %>
-      <%= render partial:"top_ups/form",locals: {top_up:top_up} %>
+      <%= render partial:"top_ups/form",locals: {f:f,top_up:top_up} %>
     </div>
 <% end %>
