--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -28,13 +28,16 @@ h1, h2, h3, h4, h5, h6 {
     }
   }
 }
-.box{
+.box,.box-full{
   padding: 20px;
   margin-bottom: 20px;
   border-radius: 3px;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
-  border:1px solid #E2F3E1 ;
+  border:5px solid #E2F3E1 ;
+}
+.box-full{
+  padding: 0;
 }
 .progressState{
   text-align: center;
@@ -55,7 +58,9 @@ h1, h2, h3, h4, h5, h6 {
 }
 .box-header{
   position: relative;
-  padding-bottom: 20px;
+  background-color: #e2f3e1;
+  margin: -20px -20px 20px;
+  padding: 20px;
   .light-header{
     color: #53B1E8;
     text-shadow: 0 1px 0 rgba(255,255,255,0.6);
@@ -210,7 +215,6 @@ h2{
     font-size: 2.5em;
 }
 p {
-  color: #707070;
   line-height: 1.8em;
 }
 .error_notification{
@@ -386,29 +390,35 @@ form,.form_central{
   color: #B94A48 !important;
 }
 }
-.error{
-  color: #B94A48;
-  font-size: 11px;
-  text-shadow:rgba(255,254,255,0.5);
-  font-family: OpenSansItalic,"Lucida Grande","Lucida Sans Unicode",Arial,sans-serif;}
-.form-horizontal .control-label {
-  text-align: left;
+form{
+
+  .error{
+    color: #B94A48;
+    font-size: 11px;
+    text-shadow:rgba(255,254,255,0.5);
+    font-family: OpenSansItalic,"Lucida Grande","Lucida Sans Unicode",Arial,sans-serif;}
+}
+.form-horizontal{
+  .control-label {
+    text-align: left;
+  }
 }
 // new added
 .nav-tabs{
-  border-bottom: 1px solid #529ECA;
+  border-bottom: 1px solid #cad9c9;
   li{
     a{
+      padding-top: 12px;
+      padding-bottom: 12px;
       color: #0086bd;
-      font-size: 12px;
-      font-family: OpenSansRegular,"Helvetica Neue", Helvetica, Arial, sans-serif;
+      font-size: 14px;
       border: none;
       border-bottom: 4px solid transparent;
       border-radius: 0;
       margin-right: 0;
       &:hover,&:focus{
-        background-color:#ddf4ff;
-        border-bottom: 4px solid #ddf4ff;
+        background-color:#e2f3e1;
+        border-bottom: 4px solid #e2f3e1;
       }
       &:focus{
         outline: none;
@@ -423,6 +433,9 @@ form,.form_central{
       border-bottom: 5px solid #529ECA;
     }
   }
+}
+.tab-nav-container{
+
 }
 .tab-host{
   .nav {
@@ -445,6 +458,7 @@ form,.form_central{
       background:transparent;
       cursor: pointer;
       position: relative;
+      background-image: none;
       i{
         color: #6d8e6a;
       }
@@ -477,7 +491,8 @@ form,.form_central{
     }
   }
   > .active,.selected{
-    a,a:hover{
+    >a,> a:hover,> a:focus{
+      background-image: none;
       color: #7CA279;
       background-color: #f3fff2;
       text-shadow: 0 1px 0 rgba(255, 255, 255, 0.6);
@@ -498,14 +513,19 @@ form,.form_central{
     }
   }
 }
+.btn-group.open .btn.dropdown-toggle {
+  background-color: #e1e1e1;
+  -moz-box-shadow: none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+}
 .white{
   .field-wrap{
     > .control-group,.control-row {
       margin-bottom:0;
-      border-bottom: 1px solid #E2F3E1 ;
+      //border-bottom: 1px solid #E2F3E1 ;
       padding: 20px 0;
       &:first-child{
-        border-top:1px solid #E2F3E1 ;
       }
       &:last-child{
         border-bottom: none;
@@ -761,12 +781,48 @@ header{
 .icon-phone{
   color: #00c900;
 }
+.tableContent{
+  position: relative;
+  .remove{
+    position:absolute;
+    right:0;
+    top:1px;
+    border-bottom:none ;
+    box-shadow: none;
+    z-index: 99;
+  }
+  header{
+    padding: 10px;
+    position:relative;
+    background-color:#e2f3e1;
+  }
+  .tableContainer{
+    position:relative;
+    max-height: 600px;
+    overflow: auto;
+    border-top: none;
+    background-color: #fff;
+  }
+}
+#historyTabs{
+  margin-bottom: 0;;
+  border:0;
+}
 .table-st{
   margin-bottom: 0;
+  border-color: #e2f3e1;
   tr{
 
+    border:1px solid #eee;
   td{
     padding: 0;
+    border:0;
+     a{
+       padding: 10px;
+       font-size: 12px;
+       color:#555;
+       display: block;
+     }
     .inner{
       overflow: hidden;
       padding: 8px;
@@ -786,7 +842,7 @@ header{
       }
     }
   }
-    border-top:1px solid #fff;
+    border-top:0;
     &:nth-child(odd),&:nth-child(even){
         &:hover{
           td{
@@ -874,32 +930,6 @@ header{
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   border-radius: 3px;
-}
-.tableContent{
-  position: relative;
-  .remove{
-    position:absolute;
-    right:0;
-    top:1px;
-    border-bottom:none ;
-    box-shadow: none;
-    z-index: 99;
-  }
-  header{
-    padding: 10px;
-    position:relative;
-    border:1px solid #D1D2D3;
-    border-bottom-color: #dedede;
-
-  }
-  .tableContainer{
-    position:relative;
-    max-height: 600px;
-    overflow: auto;
-    border: 1px solid #D1D2D3;
-    border-top: none;
-    background-color: #fff;
-  }
 }
 .contactContent{
   position: relative;
@@ -1042,9 +1072,14 @@ header{
     padding: 8px;
   }
   .notice-info{
+    text-align: center;
+    text-shadow: none;
    .alert{
-     text-align: center;
    }
+    .label-warning, .badge-warning {
+      background-color: #e6a85b;
+      padding: 10px;
+    }
   }
 }
 
@@ -1179,7 +1214,7 @@ header{
     border: 0;
     background-color: #529ECA;
     color: #fff;
-    text-shadow:0 -1px 0 rgba(0,0,0,0.3);
+    //text-shadow:0 -1px 0 rgba(0,0,0,0.3);
     font-family:"Helvetica Neue", Helvetica, Arial, sans-serif ;
     padding: 0;
     position: relative;
@@ -1407,8 +1442,31 @@ header{
   }
 }
 
+
 .alert{
   font-size: 12px;
+  padding: 10px;
+  background-color: #F1EDD7;
+  border:none;
+  .light-header{
+    margin: 0;
+    font-family: OpenSansSemibold,"Helvetica Neue", Helvetica, Arial, sans-serif ;
+    font-size: 12px;
+  }
+  p{
+    &:last-child{
+      margin-bottom: 0;
+    }
+  }
+}
+.alert-info {
+  background-color: #E4EDF1;
+}
+.alert-success {
+  background-color: #dff0d8;
+}
+.alert-error {
+  background-color: #f2dede;
 }
 .progress{
   height: 10px;
@@ -1459,9 +1517,14 @@ header{
   }
 }
 
-
+.label{
+  text-shadow: none;
+}
 .label-success, .badge-success {
   background-color: #4BB495;
+}
+.label-warning, .badge-warning {
+  background-color: #f39c12;
 }
 textarea,input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"], .uneditable-input {
 
@@ -1524,9 +1587,9 @@ input:-moz-placeholder, textarea:-moz-placeholder ,.navbar-inverse .navbar-searc
   -moz-transition: border linear .2s, box-shadow linear .2s;
   -o-transition: border linear .2s, box-shadow linear .2s;
   transition: border linear .2s, box-shadow linear .2s;
-  -moz-border-radius:0;
-  -webkit-border-radius:0;
-  border-radius:0;
+  -moz-border-radius:3px;
+  -webkit-border-radius:3px;
+  border-radius:3px;
   position: relative;
 }
 .customfile-disabled { opacity: .5; filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0); cursor: default;  }
@@ -1551,17 +1614,10 @@ input:-moz-placeholder, textarea:-moz-placeholder ,.navbar-inverse .navbar-searc
     text-decoration: none;
     background-color: #e6e6e6;
     *background-color: #d9d9d9;
-  /* Buttons in IE7 don't get borders, so darken on hover */
-
-    background-position: 0 -15px;
     -webkit-transition: background-position 0.1s linear;
     -moz-transition: background-position 0.1s linear;
     -o-transition: background-position 0.1s linear;
     transition: background-position 0.1s linear;
-
-    -moz-border-radius:0;
-    -webkit-border-radius:0;
-    border-radius:0;
   }
 }
 
@@ -1621,9 +1677,9 @@ input:-moz-placeholder, textarea:-moz-placeholder ,.navbar-inverse .navbar-searc
   -webkit-border-radius:3px;
   -moz-border-radius:3px;
   border-radius:3px;
-  -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
-  -moz-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 3px 3px 0px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow:  3px 3px 0px rgba(0, 0, 0, 0.2);
+  box-shadow:  3px 3px 0px rgba(0, 0, 0, 0.2);
   -webkit-background-clip: padding-box;
   -moz-background-clip: padding;
   background-clip: padding-box;
@@ -1722,7 +1778,7 @@ input:-moz-placeholder, textarea:-moz-placeholder ,.navbar-inverse .navbar-searc
   cursor:pointer;
   position:relative;
   background-color:#fff;
-  border: 1px solid #ccc;
+  border: 1px solid #cad9c9;
   -webkit-transition: border linear 0.2s, box-shadow linear 0.2s;
   -moz-transition: border linear 0.2s, box-shadow linear 0.2s;
   -ms-transition: border linear 0.2s, box-shadow linear 0.2s;
@@ -1740,6 +1796,8 @@ input:-moz-placeholder, textarea:-moz-placeholder ,.navbar-inverse .navbar-searc
 .custom-select-roletext { position: absolute; left: -99999px; }
 .custom-select:focus,.custom-select-open
 {
+
+  text-decoration:none;
   border-color: rgba(82, 168, 236, 0.8);
   outline: 0;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
@@ -1946,7 +2004,7 @@ input:-moz-placeholder, textarea:-moz-placeholder ,.navbar-inverse .navbar-searc
       line-height:20px;
       padding: 4px 6px;
       margin-bottom: 0;
-      border: 1px solid #B7C4B2;
+      border: 1px solid #cad9c9;
       box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 1px 0 rgba(255, 255, 255, 1);
       -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 1px 0 rgba(255, 255, 255, 1);
       -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 1px 0 rgba(255, 255, 255, 1);
@@ -2028,18 +2086,73 @@ input:-moz-placeholder, textarea:-moz-placeholder ,.navbar-inverse .navbar-searc
     }}
 
 }
-.top-btn-container{
+.table-tool-bar{
+  .option-form{
+    margin-bottom: 0;
+    .main-control{
+      padding:10px;
+      background: #e2f3e1;
+    }
+
+    .search-inner{
+      background-color: #d6e7d5;
+    }
+    input{
+      margin: 0;
+    }
+    .search-field-wrap{
+      padding: 8px;
+    }
+    .custom-select-wrapper{
+      .custom-select{
+        padding: 4px 6px;
+      }
+    }
+    label{
+      font-size:12px;
+    }
+    .tab-pane{
+      padding: 10px;
+    }
+    .search-options{
+     padding: 10px;
+    text-align: left;
+  }
+  }
+}
+.pagination{
+  overflow: hidden;
+  padding: 10px 5px;
+  background: #e2f3e1;
+  margin: 0;
   text-align: center;
+  .previous{
+    float: left;
+  }
+  .next{
+    float:right
+  }
+  .info{
+    text-align: center;
+    display: inline-block;
+    line-height: 20px;
+    padding:8px;
+  }
+}
+.top-btn-container,.table-tool-bar{
+  text-align: center;
+
   .light-header{
     margin: 5px 0;
   }
   .input-append{
     margin-bottom: 0;
   }
+  .btn{
+      padding:5px 10px;
+  }
   .btn,.btn-group > .btn:first-child,.input-prepend.input-append .add-on:first-child, .input-prepend.input-append .btn:first-child,.input-prepend.input-append .btn:last-child{
-    -webkit-border-radius: 0;
-    -moz-border-radius: 0;
-    border-radius: 0;
+
   }
   .drop-form{
     text-align: left;
@@ -2048,6 +2161,19 @@ input:-moz-placeholder, textarea:-moz-placeholder ,.navbar-inverse .navbar-searc
   .dropdown-menu{
     text-align: left;
   }
+}
+.tab-nav-container{
+  .top-btn-container{
+    padding: 5px 10px;
+    input{
+      margin: 0;
+    }
+  }
+}
+.table th {
+  font-size: 14px;
+  font-weight: normal;
+  font-family: OpenSansSemibold,"Helvetica Neue", Helvetica, Arial, sans-serif ;
 }
 
 .tab-form-container{
@@ -2065,7 +2191,7 @@ input:-moz-placeholder, textarea:-moz-placeholder ,.navbar-inverse .navbar-searc
     background-color: white;
     background-image: none;
     background-color: #fff;
-    border: 1px solid #ccc;
+    border: 1px solid #cad9c9;
     -webkit-box-shadow:none;
     -moz-box-shadow: none;
     box-shadow: none;
@@ -2813,8 +2939,10 @@ ul.listbuilder-focus {
   .ui-slider {
     background:#fff;
     padding:0;
-    border-radius: 0;
-    border-color:#ccc;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+    border-color:#cad9c9;
     .ui-slider-handle {
       top: -5px;
       margin-left: -13px;
@@ -2823,7 +2951,10 @@ ul.listbuilder-focus {
       -webkit-border-radius: 3px;
       -moz-border-radius: 3px;
       border-radius: 3px;
-      background-color: #eee;
+      border-color:#cad9c9;
+    }
+    .ui-slider-range, .ui-slider-handle{
+      background: #e2f3e1;
     }
   }
 }
@@ -2881,16 +3012,7 @@ ul.listbuilder-focus {
   left: 7px;
 }
 
-textarea, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"], .uneditable-input {
-  border: 1px solid #ccc;
-  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.6);
-  -moz-box-shadow:none;
-  -webkit-box-shadow: none;
-  box-shadow: none;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  border-radius: 3px;
-}
+
 .modal-content-body{
   padding: 20px;
   .dl-horizontal{
@@ -2908,6 +3030,17 @@ textarea, input[type="text"], input[type="password"], input[type="datetime"], in
   text-shadow: none;
 }
 
+.btn:focus {
+  outline: none;
+}
+.btn.active,
+.btn:active {
+  background-image: none;
+  outline: 0;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+}
 .btn:hover,
 .btn:focus,
 .btn:active,
@@ -2935,6 +3068,12 @@ textarea, input[type="text"], input[type="password"], input[type="datetime"], in
 }
 .btn-warning:hover, .btn-warning:focus, .btn-warning:active, .btn-warning.active, .btn-warning.disabled, .btn-warning[disabled] {
   background-color: #f5b043;
+}
+.btn-success {
+  background-color: #7AC9B2;
+}
+.btn-success:hover, .btn-success:focus, .btn-success:active, .btn-success.active, .btn-success.disabled, .btn-success[disabled] {
+   background-color: #8DD3BF;
 }
 .input-prepend.input-append input, .input-prepend.input-append select, .input-prepend.input-append .uneditable-input {
   border-right: none;
@@ -3110,13 +3249,129 @@ border-radius: 3px;
 }
 .top-message{
   font-family: OpenSansItalic,"Lucida Grande","Lucida Sans Unicode",Arial,sans-serif;
-font-size:12px;
+  font-size:12px;
+  i{
+    float: left;
+    font-size: 24px;
+  }
 }
 .alert-center{
   text-align: center;
 }
 .message-content{
   border-bottom: 1px solid #ddd;
-  padding-bottom: 10px;
+  padding-bottom: 20px;
+  margin-bottom: 10px;
   text-align:center;
 }
+.custom-select, textarea, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"], .uneditable-input {
+  border: 1px solid #cad9c9;
+  -moz-box-shadow:none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+}
+.custom-select:focus,.custom-select-open
+{
+  border-color: rgba(82, 168, 236, 0.8);
+}
+
+.icon_box{
+  padding: 10px;
+  color:#c09853;
+  i{
+    font-size: 64px;
+  }
+}
+
+.input-append .add-on, .input-prepend .add-on {
+  color: #fff;
+  background-color: #d0d5d9;
+  border: 1px solid #d0d5d9;
+}
+.input-append input, .input-prepend input, .input-append select, .input-prepend select, .input-append .uneditable-input, .input-prepend .uneditable-input {
+  -webkit-border-radius: 3px 0 0 3px;
+  -moz-border-radius: 3px 0 0 3px;
+  border-radius: 3px 0 0 3px;
+}
+.modal-body{
+  .progressState{
+    margin: 20px;
+  }
+}
+.custom-search{
+  margin-right: 30px;
+  .custom-search-input{
+    display: inline-block;
+    width:50%;
+    position: relative;
+    .search-btn{
+      width: 100%;
+      border-radius: 3px 0 0 3px;
+      -moz-border-radius: 3px 0 0 3px;
+      -webkit-border-radius: 3px 0 0 3px;
+      border-right: 0;
+    }
+    .custom-search-anchor{
+      position: absolute;
+      right: 8px;
+      top: 5px;
+      text-decoration: none;
+      display: inline-block;
+      color: #cad9c9;
+      z-index: 99;
+      &:hover,&:active{
+        color: #68af9c;
+        text-decoration: none;
+      }
+    }
+  }
+  .custom-search-input.open{
+    .search-btn{
+      border-radius: 3px 0 0 0;
+      -moz-border-radius: 3px 0 0 0;
+      -webkit-border-radius: 3px 0 0 0;
+    }
+    .search-options {
+      border-top: 0;
+      display: block;
+    }
+  }
+  .sr{
+    margin-left: -4px;
+    border-radius: 0 3px 3px 0;
+    -moz-border-radius: 0 3px 3px 0;
+    -webkit-border-radius: 0 3px 3px 0;
+  }
+  .search-options {
+    cursor: pointer;
+    margin:0 0;
+    width:100%;
+    padding: 5px 0;
+    position: absolute;
+    display: none;
+    top: 100%;
+    left: 0;
+    z-index: 10;
+    list-style: none;
+    background-color: white;
+    border: 1px solid #CCC;
+    -webkit-border-radius: 0 0 3px 3px;
+    -moz-border-radius:0 0 3px 3px;
+    border-radius: 0 0 3px 3px;
+    -webkit-box-shadow: 3px 3px 0px rgba(0, 0, 0, 0.2);
+    -moz-box-shadow:  3px 3px 0px rgba(0, 0, 0, 0.2);
+    box-shadow:  3px 3px 0px rgba(0, 0, 0, 0.2);
+    -webkit-background-clip: padding-box;
+    -moz-background-clip: padding;
+    background-clip: padding-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+  }
+}
+
+
+
