--- a/app/views/application/_interswitch_alert_info.html.erb
+++ b/app/views/application/_interswitch_alert_info.html.erb
@@ -1,3 +1,3 @@
 <div class="alert alert-info">
-  All  transactions are <i class="fa fa-lock"></i> secured and processed by Interswitch WebPay which supports Naira Mastercard, and Verve debit cards
+  <i class="fa fa-info-circle"></i> All  transactions are <i class="fa fa-lock"></i> secured and processed by Interswitch WebPay which supports Naira Mastercard, and Verve debit cards
 </div>
