--- a/app/views/top_ups/_top_up_order.html.erb
+++ b/app/views/top_ups/_top_up_order.html.erb
@@ -2,55 +2,21 @@
   <div class="inner">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
     <div class="contactHeader">
-
-      <div class="user-info">
-        <div class="avatar">
-          <%= image_tag "avatar.png" %>
-        </div>
-        <div class="info indent">
-          <span class="receiver">Top Up : Onyemaechi Okafor</span>
-          <h3> 08099447050</h3>
-        </div>
-      </div>
+      <%= top_up_header top_up %>
     </div>
   </div>
 
 </div>
 <div class="content modal-body override">
   <div class="modal-content-body">
-    <div class="letterPressed row-fluid   message-content">
-      <div class="top-message">
-        <i class="fa fa-envelope"></i> <%= top_up.message %>
-      </div>
-    </div>
-    <div class="pay-slip row-fluid letterPressed">
-      <ul class="span6">
-        <li class="row-fluid info-block ">
-          <div class="span6 title">Order No</div>
-          <div class="span6 value"><%= order.transaction_id %></div>
-        </li>
-        <li class="row-fluid info-block ">
-          <div class="span6 title">Amount</div>
-          <div class="span6 value"><%= number_to_currency order.item.amount , unit: "₦" , precision: 0 %></div>
-        </li>
-        <li class="row-fluid info-block">
-          <div class="span6 title">Payment Method</div>
-          <div class="span6 value"><%= order.payment_processor.name%></div>
-        </li>
-        <li class="row-fluid info-block">
-          <div class="span6 title">Total Due</div>
-          <div class="span6 value"><span class="label total label-important"><%= number_to_currency order.item.amount, unit: "₦" , precision: 0 %> </span></div>
-        </li>
-      </ul>
-      <div class="notice-info span6">
-        <%= alert_for_payment_gateway(order.payment_processor) %>
-        <% if order.pending? || !order.confirmed? %>
-            <div class="alert alert-warning">
-              <i class="fa fa-warning"></i> Your Order is pending
-            </div>
-        <% end %>
-      </div>
-    </div>
+      <% if top_up.message.present? %>
+        <div class="letterPressed row-fluid   message-content">
+          <div class="top-message">
+            <i class="fa fa-envelope"></i> <%= top_up.message %>
+          </div>
+        </div>
+      <% end %>
+    <%= render :partial => "orders/order_info",locals: {order:order} %>
     </div>
 </div>
 <div class="modal-footer">
