--- a/app/views/wallets/_wallet_order.html.erb
+++ b/app/views/wallets/_wallet_order.html.erb
@@ -3,10 +3,10 @@
       <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
       <div class="contactHeader">
         <div class="icon">
-          <i class="fa fa-shopping-cart"></i>
+          <i class="fa fa-money"></i>
         </div>
         <div class="info indent">
-          <h3>Checkout</h3>
+          <h3>Deposit</h3>
         </div>
       </div>
     </div>
@@ -14,35 +14,7 @@
   </div>
  <div class="content modal-body override">
     <div class="modal-content-body">
-
-      <div class="pay-slip row-fluid letterPressed">
-        <ul class="span6">
-          <li class="row-fluid info-block ">
-            <div class="span6 title">Order No</div>
-            <div class="span6 value"><%= order.transaction_id %></div>
-          </li>
-          <li class="row-fluid info-block ">
-            <div class="span6 title">Amount</div>
-            <div class="span6 value"><%= number_to_currency order.item.amount , unit: "₦" , precision: 0 %></div>
-          </li>
-          <li class="row-fluid info-block">
-            <div class="span6 title">Payment Method</div>
-            <div class="span6 value"><%= order.payment_processor.name%></div>
-          </li>
-          <li class="row-fluid info-block">
-            <div class="span6 title">Total Due</div>
-            <div class="span6 value"><span class="label total label-important"><%= number_to_currency order.item.amount, unit: "₦" , precision: 0 %> </span></div>
-          </li>
-        </ul>
-        <div class="notice-info span6">
-          <%= alert_for_payment_gateway(order.payment_processor) %>
-          <% if order.pending? || !order.confirmed? %>
-              <div class="alert alert-warning">
-                <i class="fa fa-warning"></i> Your Order is pending
-              </div>
-          <% end %>
-        </div>
-      </div>
+       <%= render :partial => "orders/order_info",locals: {order:order} %>
     </div>
   </div>
  <div class="modal-footer">
